[package]
name = "evbunpack"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
color-eyre = "0.6.5"
evbunpack_core = { git = "https://github.com/ofkarosia/evbunpack_core" }
fmmap = "0.4.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"

[profile.release]
opt-level = 2
lto = "thin"
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "s"
